fix bugs and add translation

--- a/custom_components/livisi/translations/de.json
+++ b/custom_components/livisi/translations/de.json
@@ -43,6 +43,11 @@
             "luminance": {
                 "name": "Helligkeit"
             }
+        },
+        "number": {
+            "duration": {
+                "name": "Auslösedauer"
+            }
         }
     }
 }
