--- a/custom_components/livisi/translations/en.json
+++ b/custom_components/livisi/translations/en.json
@@ -43,6 +43,11 @@
             "luminance": {
                 "name": "Luminance"
             }
+        },
+        "number": {
+            "duration": {
+                "name": "Duration"
+            }
         }
     }
 }
