--- a/custom_components/livisi/translations/en.json
+++ b/custom_components/livisi/translations/en.json
@@ -42,6 +42,15 @@
             },
             "luminance": {
                 "name": "Luminance"
+            },
+            "cpu_usage": {
+                "name": "CPU usage"
+            },
+            "ram_usage": {
+                "name": "RAM usage"
+            },
+            "disk_usage": {
+                "name": "Disk usage"
             }
         }
     }
