fix bugs and add translation

--- a/custom_components/livisi/translations/en.json
+++ b/custom_components/livisi/translations/en.json
@@ -52,6 +52,11 @@
             "disk_usage": {
                 "name": "Disk usage"
             }
+        },
+        "number": {
+            "duration": {
+                "name": "Duration"
+            }
         }
     }
 }
