--- a/custom_components/livisi/translations/de.json
+++ b/custom_components/livisi/translations/de.json
@@ -52,6 +52,11 @@
             "disk_usage": {
                 "name": "Disk Nutzung"
             }
+        },
+        "number": {
+            "duration": {
+                "name": "Auslösedauer"
+            }
         }
     }
 }
